--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ subjects:
 - !lcsh 'Political corruption -- Fiction'
 - !lcsh 'Detective and mystery stories'
 - !lcc 'PS'
+- GITenberg
 title: 'The Cleverdale Mystery; or, The Machine and Its Wheels: A Story of American
   Life'
 url: http://www.gutenberg.org/ebooks/42333
